# dictare

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TERMINAL_COMPATIBILITY.md  error_output.txt  install-macos.sh  install.sh  pyproject.toml  remove-permissions.sh  setup-permissions.sh  test_sanitization.py  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-launcher.yml  ci-macos.yml  ci.yml  claude-dedupe-issues.yml  claude-issue-triage.yml  claude-pr-review.yml  claude.yml  lock-closed-issues.yml  publish-pypi.yml  sweep.yml
docs/: self-hosted-runner-setup.sh
docs/experiments/: summarization.md
docs/runners/: get-runner-token.sh  install-runner-linux.sh  install-runner-macos.sh
packaging/deb/: build-deb.sh
packaging/deb/debian/: control  postinst  postrm  prerm
packaging/homebrew/: dictare.rb  voxtype.rb
scripts/: brew-rebuild.sh  full-install.sh  install.sh  linux-install.sh  linux-uninstall.sh  macos-install.sh  macos-reset-permissions.sh  macos-uninstall.sh  publish.sh  sign-launcher.sh  test-mic.py  test.sh  uninstall.sh
scripts/dev/: full-install.sh  local-build-check.sh
scripts/linux/: install.sh  uninstall.sh
scripts/linux/test-distros/: Dockerfile.arch  Dockerfile.fedora  Dockerfile.ubuntu  run.sh
scripts/macos/: install.sh  reset-permissions.sh  sign-launcher.sh  uninstall.sh
scripts/test-distros/: Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu  README.md  run.sh
scripts/test-distros/tests/: e2e.sh  engine.sh  smoke.sh  tray.sh
spec/: README.md  openapi.yaml  openvip-protocol.md
src/claude_mic/: __init__.py  __main__.py  cli.py  config.py
src/claude_mic/audio/: beep.py  capture.py  vad.py
src/claude_mic/command/: __init__.py  base.py  keyword.py  ollama.py  processor.py
src/claude_mic/core/: app.py  state.py
src/claude_mic/hotkey/: __init__.py  base.py  evdev_listener.py  pynput_listener.py
src/claude_mic/injection/: base.py  clipboard.py  macos.py  wtype.py  xdotool.py  ydotool.py
src/claude_mic/llm/: __init__.py  models.py  processor.py  prompts.py
src/claude_mic/logging/: __init__.py  jsonl.py
src/claude_mic/stt/: base.py  faster_whisper.py
src/claude_mic/tts/: __init__.py  base.py  espeak.py
src/claude_mic/utils/: errors.py  platform.py
src/claude_mic/window/: __init__.py  base.py  xdotool.py
src/dictare/: __init__.py  __main__.py  config.py  credits.json  cuda_setup.py  models.json  status.py
src/dictare/agent/: __init__.py  keyboard.py  mux.py  pty_session.py  sse.py  status_bar.py
src/dictare/app/: __init__.py  bindings.py  controller.py
src/dictare/audio/: beep.py  capture.py  device_monitor.py  feedback_policy.py  vad.py
src/dictare/cli/: __init__.py  _helpers.py  agent.py  config.py  dependencies.py  logs.py  misc.py  models.py  panel.py  serve.py  service.py  setup.py  shortcuts.py  speak.py  status.py  transcribe.py  tray.py
src/dictare/core/: __init__.py  agent_manager.py  audio_manager.py  bus.py  controller.py  engine.py  events.py  fsm.py  http_server.py  openvip_messages.py  openvip_validator.py  settings_ui.py  toml_sections.py  transcriber.py  tts_manager.py
src/dictare/daemon/: __init__.py  app_bundle.py  launchd.py  systemd.py
src/dictare/hotkey/: __init__.py  base.py  evdev_listener.py  ipc.py  pynput_listener.py  runtime_status.py  tap_detector.py
src/dictare/input/: __init__.py  base.py  constants.py  device.py  keyboard.py  manager.py
src/dictare/logging/: __init__.py  jsonl.py  setup.py
src/dictare/pipeline/: __init__.py  base.py  loader.py
src/dictare/platform/: __init__.py  accessibility.py  permission_doctor.py  permissions.py
src/dictare/plugins/: __init__.py  base.py
src/dictare/resources/: Dictare.icns  launcher.swift  openvip-message-v1.0.json  openvip-openapi.json
src/dictare/services/: __init__.py  base.py  stt_service.py  tts_service.py
src/dictare/stt/: base.py  faster_whisper.py  mlx_whisper.py  parakeet.py
src/dictare/tray/: __init__.py  app.py  lifecycle.py
src/dictare/tts/: __init__.py  __main__.py  base.py  cache.py  coqui.py  espeak.py  kokoro.py  outetts.py  piper.py  proxy.py  say.py  venv.py  worker.py
src/dictare/utils/: hardware.py  hf_download.py  install_info.py  jellyfish.py  loading.py  paths.py  platform.py  state.py  stats.py
src/voxtype/: __init__.py  __main__.py  cli.py  config.py  cuda_setup.py  messages.py  models.json  status.py
src/voxtype/adapters/: __init__.py
src/voxtype/agent/: __init__.py  base.py  file.py  keyboard.py  monitor.py  mux.py  pty_session.py  registrar.py  socket.py  sse.py  status_bar.py  watcher.py
src/voxtype/app/: __init__.py  bindings.py  controller.py
src/voxtype/audio/: beep.py  capture.py  device_monitor.py  vad.py
src/voxtype/cli/: __init__.py  _helpers.py  agent.py  completion.py  (+18 more)
tests/: __init__.py  conftest.py  test_agent_logging.py  test_agent_template.py  test_audio_devices.py  test_beep_extra.py  test_claim_agent.py  test_cli.py  test_cli_status.py  test_code_quality_fixes.py  test_config.py  test_controller.py  test_controller_extra.py  test_dependencies_extra.py  test_device_monitor.py  test_engine.py  test_engine_extra.py  test_event_bus.py  test_executor_agent_switch.py  test_executor_submit.py  test_feedback_policy.py  test_fsm.py  test_hardware.py  test_hf_download.py  test_hotkey_ipc.py  test_http_server.py  test_http_server_extra.py  test_injection_base.py  test_input_base.py  test_input_keyboard.py  test_input_manager.py  test_jsonl_logger.py  test_launchd_extra.py  test_linux_fixes.py  test_loading.py  test_local_receiver.py  test_logging.py  test_loop_audio.py  test_messages.py  test_mode_switch.py  (+46 more)
tests/cli/: test_logs.py  test_models.py  test_service.py  test_speak.py  test_transcribe.py
ui/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
ui/src/: app.css  app.html
(+198 files in other folders)
