[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxtype"
dynamic = ["version"]
description = "Voice-to-text for your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "dragfly" }
]
keywords = ["voice", "speech-to-text", "dictation", "cli", "whisper", "linux", "wayland"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.5.0,<0.5.4",  # 0.5.4 has finished_callback bug
    "numpy>=1.24.0",
    "typer-slim[standard]>=0.12.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.0.0",
    "toml>=0.10.0",
    "rich>=13.0.0",  # Console output, tables, progress bars
    # Platform-specific dependencies
    "evdev>=1.7.0; sys_platform == 'linux'",
    "pynput>=1.7.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "hidapi>=0.14.0; sys_platform == 'darwin'",  # hidapi for device profiles (bundles native lib)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "typer>=0.12.0",  # For CLI tests (typer-slim is in main deps)
]
gpu = [
    "nvidia-cudnn-cu12>=9.1.0,<9.2.0",  # Must match ctranslate2's cuDNN requirement
]
mlx = [
    "mlx>=0.20.0",
    "mlx-whisper>=0.4.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.60.0",
    "tiktoken>=0.5.0",
    "scipy>=1.10.0",
    "numba>=0.60",
]
tts = [
    "piper-tts>=1.2.0",
]

[project.scripts]
voxtype = "voxtype.cli:main"

[project.urls]
Homepage = "https://github.com/dragfly/voxtype"
Repository = "https://github.com/dragfly/voxtype"
Issues = "https://github.com/dragfly/voxtype/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voxtype"]

[tool.hatch.version]
path = "src/voxtype/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
