[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxtype"
dynamic = ["version"]
description = "Voice-first control for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "dragfly" }
]
keywords = ["voice", "speech-to-text", "ai-agent", "voice-coding", "claude", "cursor", "dictation", "cli", "whisper", "openvip", "voice-control", "coding-assistant", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.5.0,<0.5.4",  # 0.5.4 has finished_callback bug
    "numpy>=1.24.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "faster-whisper>=1.0.0",
    "toml>=0.10.0",
    "rich>=13.0.0",  # Console output, tables, progress bars
    # Platform-specific dependencies
    "evdev>=1.7.0; sys_platform == 'linux'",
    "pynput>=1.7.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "hidapi>=0.14.0; sys_platform == 'darwin'",  # hidapi for device profiles (bundles native lib)
    # System tray (cross-platform, ~13MB total)
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    # Structured JSON logging (standard Python approach)
    "python-json-logger>=2.0.0",
    # FastAPI HTTP server for OpenVIP protocol
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.0.0",
    # OpenVIP client SDK
    "openvip>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.0,<0.15.0",
    "mypy>=1.0.0",
]
gpu = [
    "nvidia-cudnn-cu12>=9.1.0,<9.2.0",  # Must match ctranslate2's cuDNN requirement
]
mlx = [
    "mlx>=0.20.0",
    "mlx-whisper>=0.4.0",
    "mlx-audio>=0.3.0",  # TTS (OuteTTS, VyvoTTS) optimized for Apple Silicon
    "huggingface-hub>=0.20.0",
    "tqdm>=4.60.0",
    "tiktoken>=0.5.0",
    "scipy>=1.10.0",
    "numba>=0.60",
    "soundfile>=0.12.0",  # Required for TTS audio output
]
tts = [
    "piper-tts>=1.2.0",
    "pathvalidate>=3.0.0",  # Missing piper-tts dependency
]

[project.scripts]
voxtype = "voxtype.cli:main"

[project.urls]
Homepage = "https://github.com/dragfly/voxtype"
Repository = "https://github.com/dragfly/voxtype"
Issues = "https://github.com/dragfly/voxtype/issues"

[tool.uv.sources]
openvip = { path = "../../openvip-dev/sdks/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/voxtype"]
artifacts = ["*.mp3", "*.icns", "*.png", "*.swift"]

[tool.hatch.version]
path = "src/voxtype/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["_parked"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - many pre-existing violations

[tool.mypy]
python_version = "3.11"
# Relaxed settings - strict mode has too many pre-existing violations
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: integration tests (app bundle, http server, race conditions) — run with: pytest -m slow",
]
